--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,13 @@
 language: node_js
+node_js:
+  - 14
+
+before_script:
+  - npm install -g gulp-cli
+
+script: gulp
+
+cache: npm
 
 branches:
   only:
