--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: node_js
 node_js:
   - 14
-
-before_script:
-  - npm install -g gulp-cli
-
-script: gulp
-
-cache: npm
-
+install:
+  - npm install
+cache:
+  directories:
+    - node_modules
 branches:
   only:
     - develop
