--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "karma-coverage": "^2.0.3",
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
-    "karma-spec-reporter": "^0.0.32"
+    "karma-spec-reporter": "^0.0.32",
+    "gulp-jsdoc3": "^3.0.0"
   }
 }
