--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
     "karma-spec-reporter": "^0.0.32"
+  },
+  "dependencies": {
+    "gulp-preprocess": "^3.0.3",
+    "gulp-replace": "^1.0.0",
+    "minimist": "^1.2.5"
   }
 }
