--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,44 +1,21 @@
-name: Node.js CI
+name: Player Test
 on:
   push:
-    branches: [ develop ]
-  pull_request:
-    branches: [ develop ]
-
-  workflow_dispatch:
-
+    branches:
+      - develop
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        browser: [chromium, firefox]
+steps:
+  - uses: actions/checkout@v2
+  - name: Use Node.js
+    uses: actions/setup-node@v1
+    with:
+      node-version: '14.x'
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-      - run: yarn install --frozen-lockfile
+  - name: Install dependencies
+    run: npm instal
 
-      - uses: browser-actions/setup-firefox@latest
-        if: matrix.browser == 'firefox'
-      - uses: browser-actions/setup-chromium@latest
-        if: matrix.browser == 'chromium'
-
-      - name: Run tests on Firefox
-        if: matrix.browser == 'firefox'
-        run: |
-          yarn test --browsers=Firefox
-      - name: Run test on Chromium
-        if: matrix.browser == 'chromium'
-        run: |
-          $Env:CHROMIUM_BIN = "chrome"
-          yarn test --browsers=Chromium
+  - name: Start Test
+    run: npm test
