--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,13 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v1
         with:
-          node-version: '14.x'
-
-      - name: Install dependencies
-        run: npm instal
-
-      - name: Start Test
-        run: npm test
+          node-version: 14
+      - run: npm instal
+      - run: npm test
