--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,7 +4,8 @@ on:
     branches:
       - develop
 jobs:
-  build:
+  chrome:
+    name: Chrome Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -12,6 +13,17 @@ jobs:
         with:
           node-version: 14
       - uses: browser-actions/setup-chromium@latest
-      - run: chrome --version
+      - run: npm install
+      - run: npm test
+
+  firefox:
+    name: FireFox Test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 14
+      - uses: browser-actions/setup-firefox@latest
       - run: npm install
       - run: npm test
