--- a/package.json
+++ b/package.json
@@ -17,22 +17,23 @@
   ],
   "devDependencies": {
     "@pixi/jsdoc-template": "^2.6.0",
-    "browser-sync": "^2.26.14",
+    "browser-sync": "^2.27.5",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-jsdoc3": "^3.0.0",
-    "gulp-preprocess": "^3.0.3",
+    "gulp-preprocess": "^4.0.2",
     "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-uglify-es": "^2.0.0",
-    "jasmine": "^3.6.4",
-    "jasmine-core": "^3.6.0",
-    "jsdoc": "^3.3.0-alpha5",
-    "karma": "^6.1.0",
+    "gulp-replace": "^1.1.3",
+    "gulp-uglify-es": "^3.0.0",
+    "jasmine": "^3.8.0",
+    "jasmine-core": "^3.8.0",
+    "jsdoc": "^3.6.7",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
-    "karma-firefox-launcher": "^2.1.0",
+    "karma-firefox-launcher": "^2.1.1",
     "karma-jasmine": "^4.0.1",
+    "karma-safari-launcher": "^1.0.0",
     "karma-spec-reporter": "^0.0.32",
     "minimist": "^1.2.5"
   }
