--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,5 +30,7 @@ jobs:
           node-version: 14
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
+        with:
+          firefox-version: latest-esr
       - run: npm install
       - run: npm test
