--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,8 +29,6 @@ jobs:
         with:
           node-version: 14
       - uses: browser-actions/setup-chromium@latest
-      - uses: browser-actions/setup-firefox@latest
-        with:
-          firefox-version: latest-esr
+      - uses: browser-actions/setup-firefox@stable
       - run: npm install
       - run: npm test
