--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,6 +31,6 @@ jobs:
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
         with:
-          firefox-version: latest-esr
+          firefox-version: latest-amd
       - run: npm install
       - run: npm test
