--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,6 +29,8 @@ jobs:
         with:
           node-version: 14
       - uses: browser-actions/setup-chromium@latest
-      - uses: ueokande/setup-firefox@latest
+      - uses: browser-actions/setup-firefox@latest
+        with:
+          firefox-version: "84.0"
       - run: npm install
       - run: npm test
