--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Toshiyuki Ienaga<ienaga@tvon.jp>",
   "license": "MIT",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "eslint": "gulp eslint"
   },
   "directories": {
     "source": "./src/",
