--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,5 @@ jobs:
         with:
           firefox-version: "84.0"
       - run: npm install
-      - run: npm eslint
-      - run: npm test
+      - run: npm run eslint
+      - run: npm run test
