edit eslint seting

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           sudo safaridriver --enable
           safaridriver -p 0 &
       - run: npm install
-      - run: npm run eslint
+      - run: npm run lint
       - run: npm run test
 
   windows-browser-test:
@@ -37,5 +37,5 @@ jobs:
         with:
           firefox-version: "84.0"
       - run: npm install
-      - run: npm run eslint
+      - run: npm run lint
       - run: npm run test
