Framework連携テスト

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@next2d/player",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Next2D Player",
   "author": "Toshiyuki Ienaga<ienaga@tvon.jp>",
   "license": "MIT",
   "homepage": "https://next2d.app",
   "bugs": "https://github.com/Next2D/Player/issues",
   "keywords": [
-    "Next2D", "Next2D Player"
+    "Next2D",
+    "Next2D Player"
   ],
   "repository": {
     "type": "git",
