--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -18,6 +18,8 @@ jobs:
           node-version: 14.x
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
+        with:
+          firefox-version: "84.0"
       - run: |
           sudo safaridriver --enable
           safaridriver -p 0 &
