--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -13,9 +13,10 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: ["14.x", "17.x"]
+          cache: npm
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
       - run: npm install
@@ -25,9 +26,10 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: ["14.x", "17.x"]
+          cache: npm
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
         with:
