--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: ["14.x", "17.x"]
+          node-version: 14
           cache: npm
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: ["14.x", "17.x"]
+          node-version: 14
           cache: npm
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
