--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -15,8 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14
-          cache: npm
+          node-version: "14.x"
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
       - run: npm install
@@ -28,8 +27,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14
-          cache: npm
+          node-version: "14.x"
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
         with:
