--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@next2d/player",
-  "version": "1.4.15",
-  "description": "Next2D Player. Aims to provide a fast 2D player.",
+  "version": "1.5.0",
+  "description": "Experience the fast and beautiful anti-aliased rendering of WebGL. You can create rich, interactive graphics, cross-platform applications and games without worrying about browser or device compatibility.",
   "author": "Toshiyuki Ienaga<ienaga@tvon.jp>",
   "license": "MIT",
   "homepage": "https://next2d.app",
