--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "gulp build"
   },
   "devDependencies": {
-    "@pixi/jsdoc-template": "^2.6.0",
+    "@next2d/jsdoc-template": "^0.0.1",
     "browser-sync": "^2.27.7",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
@@ -20,16 +20,16 @@
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.3",
     "gulp-uglify-es": "^3.0.0",
-    "jasmine": "^3.10.0",
-    "jasmine-core": "^3.10.1",
-    "jsdoc": "^3.6.7",
-    "karma": "^6.3.9",
+    "jasmine": "^4.0.2",
+    "jasmine-core": "^4.0.1",
+    "jsdoc": "^3.6.10",
+    "karma": "^6.3.16",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.1.0",
+    "karma-coverage": "^2.2.0",
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^4.0.1",
     "karma-safari-launcher": "^1.0.0",
-    "karma-spec-reporter": "^0.0.32",
+    "karma-spec-reporter": "^0.0.33",
     "minimist": "^1.2.5"
   }
 }
