--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -10,24 +10,30 @@ on:
 
 jobs:
   macos-browser-test:
+    strategy:
+      matrix:
+        node-version: ["14.x", "15.x", "16.x", "17.x", "18.x"]
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: "14.x"
+          node-version: ${{ matrix.node-version }}
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
       - run: npm install
       - run: npm run test
 
   windows-browser-test:
+    strategy:
+      matrix:
+        node-version: ["14.x", "15.x", "16.x", "17.x", "18.x"]
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: "14.x"
+          node-version: ${{ matrix.node-version }}
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
         with:
