--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -12,7 +12,7 @@ jobs:
   macos-browser-test:
     strategy:
       matrix:
-        node-version: ["14.x", "15.x", "16.x", "17.x", "18.x"]
+        node-version: ["17.x", "18.x"]
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
@@ -29,7 +29,7 @@ jobs:
   windows-browser-test:
     strategy:
       matrix:
-        node-version: ["14.x", "15.x", "16.x", "17.x", "18.x"]
+        node-version: ["17.x", "18.x"]
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
