--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -21,6 +21,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
+        with:
+          firefox-version: latest
       - run: npm install
       - run: npm run test
 
@@ -36,5 +38,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
+        with:
+          firefox-version: latest
       - run: npm install
       - run: npm run test
