--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
         with:
-          firefox-version: latest
+          firefox-version: "90.0"
       - run: npm install
       - run: npm run test
 
@@ -39,6 +39,6 @@ jobs:
       - uses: browser-actions/setup-chromium@latest
       - uses: browser-actions/setup-firefox@latest
         with:
-          firefox-version: latest
+          firefox-version: "90.0"
       - run: npm install
       - run: npm run test
