#25 TypeScriptへの移行準備

--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
-  "name": "next2d-player",
-  "description": "Next2D Player",
+  "name": "@next2d/player",
+  "version": "1.14.4",
+  "description": "Experience the fast and beautiful anti-aliased rendering of WebGL. You can create rich, interactive graphics, cross-platform applications and games without worrying about browser or device compatibility.",
   "author": "Toshiyuki Ienaga<ienaga@tvon.jp>",
   "license": "MIT",
+  "homepage": "https://next2d.app",
+  "bugs": "https://github.com/Next2D/Player/issues",
+  "main": "next2d.js",
+  "keywords": [
+    "Next2D",
+    "Next2D Player"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Next2D/Player.git"
+  },
   "scripts": {
     "start": "gulp",
     "test": "gulp test",
