#25 TypeScriptへの移行準備

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-.DS_Store
-.idea
-.nvmrc
-Thumbs.db
 node_modules
+json
+dist
+coverage
 Footer.build.file
 Header.build.file
-json
-coverage
 src/util/Util.replaced.js
 src/worker/RenderWorker.js
 src/worker/*.min.js
 *.html
 package-lock.json
+.DS_Store
+.idea
+Thumbs.db
