--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -15,7 +15,8 @@
   },
   "include": [
     "**/*.ts",
-    "webgl/**/*.ts",
+    "../webgl/**/*.ts",
+    "../player/**/*.ts",
     "../../@types/**/*.ts"
   ],
   "exclude": [
