--- a/.npmignore
+++ b/.npmignore
@@ -6,8 +6,13 @@
 __test__
 src
 node_modules
+json
 DOCS.md
 DEVELOP.md
 jest.config.js
 jest.setup.js
 webpack.config.js
+babel.config.js
+jsdoc.conf.js
+tsconfig.eslint.json
+next2d.js
