--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "declaration": true,
-    "target": "esnext",
-    "lib": ["es6", "dom"],
-    "module": "esnext",
+    "target": "es6",
+    "module": "es6",
     "moduleResolution": "node",
     "baseUrl": ".",
     "outDir": "./dist/"
