--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -25,4 +25,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - run: npm install
+      - run: npm run build
       - run: npm run test
