--- a/packages/webgl/package.json
+++ b/packages/webgl/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@next2d/webgl",
+  "version": "*",
   "description": "Next2D Webgl Packages",
   "author": "Toshiyuki Ienaga<ienaga@tvon.jp> (https://github.com/ienaga/)",
   "license": "MIT",
