--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - run: npm install
+      - run: npm run clean
       - run: npm run build
       - run: npm run test
 
@@ -26,5 +27,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - run: npm install
+      - run: npm run clean
       - run: npm run build
       - run: npm run test
