#98 WebGLの処理負荷になってる箇所を調査・改修(WIP)

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "packages/*"
   ],
   "scripts": {
-    "start": "webpack serve",
+    "start": "tsc && node ./scripts/build.js && webpack serve",
     "lint": "eslint src/**/*.ts packages/**/*.ts worker/**/*.ts",
     "publish:dist": "tsc && node ./scripts/publish.js",
     "clean": "node ./scripts/clean.js",
