--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "type": "github",
     "url": "https://github.com/sponsors/Next2D"
   },
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/plugin-transform-modules-commonjs": "^7.22.5",
@@ -43,6 +42,7 @@
     "eslint": "^8.43.0",
     "eslint-webpack-plugin": "^4.0.1",
     "fflate": "^0.8.0",
+    "htmlparser2": "^9.0.0",
     "jest": "^29.5.0",
     "jsdoc": "^4.0.2",
     "ts-jest": "^29.1.0",
