--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "type": "github",
     "url": "https://github.com/sponsors/Next2D"
   },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.22.11",
     "@babel/plugin-transform-modules-commonjs": "^7.22.11",
