--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next2d/player",
-  "version": "1.17.2",
+  "version": "1.17.4",
   "description": "Experience the fast and beautiful anti-aliased rendering of WebGL. You can create rich, interactive graphics, cross-platform applications and games without worrying about browser or device compatibility.",
   "author": "Toshiyuki Ienaga<ienaga@tvon.jp> (https://github.com/ienaga/)",
   "license": "MIT",
@@ -32,7 +32,9 @@
     "type": "github",
     "url": "https://github.com/sponsors/Next2D"
   },
-  "dependencies": {},
+  "dependencies": {
+    "htmlparser2": "^9.0.0",
+  },
   "devDependencies": {
     "@babel/core": "^7.22.11",
     "@babel/plugin-transform-modules-commonjs": "^7.22.11",
@@ -44,7 +46,6 @@
     "eslint": "^8.48.0",
     "eslint-webpack-plugin": "^4.0.1",
     "fflate": "^0.8.0",
-    "htmlparser2": "^9.0.0",
     "jest": "^29.6.4",
     "jsdoc": "^4.0.2",
     "ts-jest": "^29.1.1",
