--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@next2d/player",
-  "version": "1.18.6",
+  "version": "1.18.7",
   "description": "Experience the fast and beautiful anti-aliased rendering of WebGL. You can create rich, interactive graphics, cross-platform applications and games without worrying about browser or device compatibility.",
-  "author": "Toshiyuki Ienaga<ienaga@tvon.jp> (https://github.com/ienaga/)",
+  "author": "Toshiyuki Ienaga<ienaga@next2d.app> (https://github.com/ienaga/)",
   "license": "MIT",
   "homepage": "https://next2d.app",
   "bugs": "https://github.com/Next2D/Player/issues",
@@ -26,8 +26,7 @@
     "publish:dist": "tsc && node ./scripts/publish.js",
     "clean": "node ./scripts/clean.js",
     "build": "tsc && node ./scripts/build.js && webpack --mode production",
-    "test": "jest",
-    "jsdoc": "tsc && jsdoc -c jsdoc.conf.js -r dist DOCS.md"
+    "test": "jest"
   },
   "funding": {
     "type": "github",
@@ -37,23 +36,22 @@
     "htmlparser2": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.19",
-    "@babel/plugin-transform-modules-commonjs": "^7.22.15",
-    "@babel/preset-env": "^7.22.15",
-    "@next2d/jsdoc-template": "^1.0.7",
-    "@types/jest": "^29.5.4",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "eslint": "^8.49.0",
+    "@babel/core": "^7.23.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.23.0",
+    "@babel/preset-env": "^7.23.2",
+    "@types/jest": "^29.5.7",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "eslint": "^8.52.0",
     "eslint-webpack-plugin": "^4.0.1",
-    "fflate": "^0.8.0",
+    "fflate": "^0.8.1",
     "jest": "^29.7.0",
     "jsdoc": "^4.0.2",
     "ts-jest": "^29.1.1",
-    "ts-loader": "^9.4.4",
+    "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "webpack": "^5.88.2",
+    "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
