--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "@next2d/player",
-  "version": "1.18.12",
+  "version": "1.18.13",
   "description": "Experience the fast and beautiful anti-aliased rendering of WebGL. You can create rich, interactive graphics, cross-platform applications and games without worrying about browser or device compatibility.",
   "author": "Toshiyuki Ienaga<ienaga@next2d.app> (https://github.com/ienaga/)",
   "license": "MIT",
   "homepage": "https://next2d.app",
   "bugs": "https://github.com/Next2D/Player/issues",
-  "main": "index.js",
-  "bundle": "dist/next2d.min.js",
-  "types": "index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "./src/index.js",
+      "require": "./src/index.js"
+    }
+  },
   "keywords": [
     "Next2D",
     "Next2D Player"
@@ -21,12 +29,12 @@
     "packages/*"
   ],
   "scripts": {
-    "start": "tsc && node ./scripts/build.js && webpack serve",
+    "start": "vite --host",
     "lint": "eslint src/**/*.ts packages/**/*.ts worker/**/*.ts",
-    "publish:dist": "tsc && node ./scripts/publish.js",
+    "test": "vitest",
     "clean": "node ./scripts/clean.js",
-    "build": "tsc && node ./scripts/build.js && webpack --mode production",
-    "test": "jest"
+    "build": "tsc && node ./scripts/build.js",
+    "publish:dist": "tsc && node ./scripts/publish.js"
   },
   "funding": {
     "type": "github",
@@ -36,24 +44,16 @@
     "htmlparser2": "^9.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.8",
-    "@babel/plugin-transform-modules-commonjs": "^7.24.8",
-    "@babel/preset-env": "^7.24.8",
-    "@types/jest": "^29.5.12",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
+    "@types/node": "^20.14.11",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
+    "@vitest/web-worker": "^2.0.3",
     "eslint": "^8.52.0",
-    "eslint-webpack-plugin": "^4.2.0",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "fflate": "^0.8.2",
-    "jest": "^29.7.0",
-    "jsdoc": "^4.0.3",
-    "ts-jest": "^29.2.2",
-    "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "vite": "^5.3.4",
+    "vitest": "^2.0.3"
   },
   "peerDependencies": {
     "@next2d/core": "file:packages/core",
@@ -68,7 +68,6 @@
     "@next2d/text": "file:packages/text",
     "@next2d/ui": "file:packages/ui",
     "@next2d/util": "file:packages/util",
-    "@next2d/webgl": "file:packages/webgl",
-    "@next2d/webpack-worker-loader-plugin": "file:packages/webpack-worker-loader-plugin"
+    "@next2d/webgl": "file:packages/webgl"
   }
 }
