--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,36 @@
 {
   "compilerOptions": {
-    "strict": true,
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "strictFunctionTypes": false,
     "esModuleInterop": true,
-    "skipLibCheck": true,
     "declaration": true,
-    "target": "es6",
-    "module": "es6",
-    "lib": [
-      "es6",
-      "dom"
-    ],
-    "moduleResolution": "node",
+    "isolatedModules": true,
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+
     "baseUrl": ".",
     "outDir": "./dist",
     "paths": {
       "@next2d/*": [
         "packages/*/src"
       ]
-    }
+    },
+    
+    "types": [
+      "vitest/globals"
+    ]
   },
   "include": [
     "src/index.ts",
