--- a/packages/net/package.json
+++ b/packages/net/package.json
@@ -26,9 +26,7 @@
     "url": "git+https://github.com/Next2D/Player.git"
   },
   "peerDependencies": {
-    "@next2d/interface": "file:../interface",
     "@next2d/core": "file:../core",
-    "@next2d/util": "file:../util",
-    "@next2d/share": "file:../share"
+    "@next2d/util": "file:../util"
   }
 }
