#154 update: Lintの設定を更新

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -9,6 +9,8 @@
   "exclude": [
     "node_modules",
     "dist",
+    "worker/**/*.test.ts",
+    "packages/**/*.test.ts",
     "src/**/*.test.ts",
   ]
 }
