--- a/packages/webgl/package.json
+++ b/packages/webgl/package.json
@@ -24,5 +24,8 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Next2D/Player.git"
+  },
+  "peerDependencies": {
+    "@next2d/texture-packer": "file:../texture-packer"
   }
 }
