--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "htmlparser2": "^9.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.9.1",
     "@types/node": "^22.5.0",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
@@ -52,6 +54,7 @@
     "eslint": "^9.9.1",
     "eslint-plugin-unused-imports": "^4.1.3",
     "fflate": "^0.8.2",
+    "globals": "^15.9.0",
     "jsdom": "^25.0.0",
     "typescript": "^5.5.4",
     "vite": "^5.4.2",
