--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,3 @@
-.eslintignore
-.eslintrc.json
 .gitattributes
 .gitignore
 .github
@@ -8,5 +6,6 @@ node_modules
 src
 DOCS.md
 DEVELOP.md
+eslint.config.mjs
 next2d.js
 vite.config.ts
