--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -25,7 +25,7 @@
     "type": "git",
     "url": "git+https://github.com/Next2D/Player.git"
   },
-  "peerDependencies": {
-    "@next2d/share": "file:../share"
+  "dependencies": {
+    "htmlparser2": "^9.1.0"
   }
 }
